objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Payor_Type__c</fullName>
        <label>Payor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Payors</fullName>
                </value>
                <value>
                    <fullName>Medicare Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Category__c</fullName>
        <label>Pricing Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Case</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Legacy_ID__c</fullName>
        <label>Product Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vol_Monthly_Mins__c</fullName>
        <label>Vol. Monthly Mins.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>